# cace

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  Changelog.md  Makefile  README  README.md  cace.py  cace_calculate.py  cace_collate.py  cace_compat.py  cace_evaluate.py  cace_gensim.py  cace_gui.py  cace_launch.py  cace_makeplot.py  cace_measure.py  cace_read.py  cace_regenerate.py  cace_simulate.py  cace_write.py  characterize_help.txt  default.nix  failreport.py  flake.nix  format.txt  layout_estimate.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  settings.py  spiceunits.py
.github/workflows/: ci.yaml  ci_nix.yml  pypi.yaml
cace/: __init__.py  __main__.py  __version__.py  cace_cli.py  cace_gui.py
cace/common/: cace_calculate.py  cace_collate.py  cace_compat.py  cace_evaluate.py  cace_gensim.py  cace_launch.py  cace_makeplot.py  cace_measure.py  cace_read.py  cace_regenerate.py  cace_simulate.py  cace_unused.py  cace_write.py  common.py  custom_semaphore.py  electrical_parameter.py  layout_estimate.py  misc.py  netlist_precheck.py  physical_parameter.py  ring_buffer.py  safe_eval.py  simulation_job.py  simulation_manager.py  spiceunits.py
cace/doc/: format.txt
cace/gui/: consoletext.py  editparam.py  failreport.py  helpwindow.py  rowwidget.py  settings.py  simhints.py  style.py  textreport.py  tksimpledialog.py  tooltip.py
cace/logging/: __init__.py  logger.py
cace/parameter/: __init__.py  electrical_parameter.py  parameter.py  parameter_klayout_drc.py  parameter_klayout_lvs.py  parameter_magic_antenna_check.py  parameter_magic_area.py  parameter_magic_drc.py  (+5 more)
doc/: characterize_help.txt  format.txt
nix/: colab-env.nix  create-shell.nix  docker.nix  gdsfactory.nix  overlay.nix
tests/: context.py  test1.py
(+37 files in other folders)
