[project]
name = "cace"
dynamic = [
    "version",
    "dependencies"
]
requires-python = ">=3.8"
authors = [
  { name="Tim Edwards", email="tim@efabless.com" },
  { name="Leo Moser", email="leo.moser@efabless.com" },
]
description = "Circuit Automatic Characterization Engine"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "cace.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/efabless/cace"
Issues = "https://github.com/efabless/cace/issues"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cace*"]

[project.scripts]
cace = "cace.cace_cli:cli"
cace-gui = "cace.cace_gui:gui"
